--- a/data/options.html
+++ b/data/options.html
@@ -22,9 +22,8 @@ textarea {
   vertical-align: bottom;
 }
 .footer {
-  position: fixed;
-  bottom: 1em;
   font-size: 80%;
+
 }
 a, a:visited {
   color: #333;
@@ -61,6 +60,13 @@ a, a:visited {
 </form>
 
 </div>
+
+    <h2 class="i18n">siteinfo</h2>
+    <div><span class="i18n">size</span>: <span id="siteinfo_size"></span></div>
+    <div><span class="i18n">updated_at</span>: <span id="siteinfo_updated_at"></span></div>
+    <form>
+      <input class="i18n" id="update_siteinfo" type="button" value="update_siteinfo" />
+    </form>
 
 <div class="footer">
 AutoPagerize
