added on/off(disable) in option page.

--- a/data/options.html
+++ b/data/options.html
@@ -39,6 +39,11 @@ a, a:visited {
 <form id="settings_form">
 
 <div>
+  <label for="form_disable" class="i18n">disable</label>
+  <input type="checkbox" id="form_disable" />
+</div>
+
+<div>
   <label for="form_dm" class="i18n">display_message_bar</label>
   <input type="checkbox" id="form_dm" />
 </div>
