--- a/data/options.html
+++ b/data/options.html
@@ -34,7 +34,7 @@ a, a:visited {
 </style>
 </head>
 <body>
-<h1><img class="icon" src="http://autopagerize.net/img/icons/icon_048.png" /> <span class="i18n">options</span></h1>
+<h1><img class="icon" src="icons/icon_048.png" /> <span class="i18n">options</span></h1>
 <div>
 <form id="settings_form">
 
